[gd_scene load_steps=6 format=3 uid="uid://bcbqny2ehildw"]

[ext_resource type="Texture2D" uid="uid://cxcahnl3sgtvx" path="res://sprite/estilhaço.png" id="1_1m2f0"]
[ext_resource type="Script" uid="uid://dj6m172pafa1w" path="res://scripts/estilhaço.gd" id="2_1m2f0"]

[sub_resource type="Animation" id="Animation_bmd3j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Node2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_gybk7"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Node2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_paw5t"]
_data = {
&"RESET": SubResource("Animation_bmd3j"),
&"fade_out": SubResource("Animation_gybk7")
}

[node name="Node2D" type="Node2D"]

[node name="Timer" type="Timer" parent="."]
process_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Timer"]
libraries = {
&"": SubResource("AnimationLibrary_paw5t")
}

[node name="Node2D" type="Node2D" parent="."]

[node name="estilhaço" type="CPUParticles2D" parent="Node2D"]
modulate = Color(1, 1, 1, 0.211765)
z_index = -1
amount = 100
texture = ExtResource("1_1m2f0")
lifetime = 0.3
explosiveness = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_max = 658.0
scale_amount_min = 0.05
scale_amount_max = 0.12
script = ExtResource("2_1m2f0")

[node name="Timer" type="Timer" parent="Node2D/estilhaço"]
wait_time = 0.18
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="Node2D/estilhaço" method="fade_out"]
[connection signal="animation_finished" from="Timer/AnimationPlayer" to="Node2D/estilhaço" method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Node2D/estilhaço/Timer" to="Node2D/estilhaço" method="_on_timer_timeout"]
